# rest-client

./: LICENSE  olymp.py  setup.cfg
clients/: olymp.py
rest_client/: _base.py  olymp.py  with_consumer.py
