[metadata]
name = rest-client
version = 1.1.0
author = LaVita GmbH
author_email = info+opensource@lavita.de
description = Pythonic extensible rest api client
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU AGPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: Internet :: WWW/HTTP
    Development Status :: 4 - Beta
url = https://github.com/LaVita-GmbH/rest-client

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    requests
    python-jose[cryptography]
    jsonpath-ng
